# Carbon-Activity

./: App.py  README.md  main.py  pyproject.toml
data/: .~lock.core_data.xlsx#
